<resources>
    <string name="app_name">iAttendance</string>

    <string name="in">In</string>
    <string name="out">Out</string>
    <string name="remarks">Remarks</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="workinghour">9</string>
    <string name="whour">Hour</string>
    <string name="submit">Submit</string>
    <string name="gender">Gender</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="designation">Designation</string>
    <string name="employeeid">Employee id</string>
    <string name="password">Password</string>
    <string name="signin">Add Employee</string>
    <string name="forgot">Forgot Password</string>
    <string name="searchbydate">Search</string>
    <string name="event">Add Event Schedule</string>
    <string name="location">Location</string>
    <string name="but_done">Done</string>
    <string name="address">Address</string>
    <string name="update">Update</string>

    <string name="reportview">View Report</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_view_dates">viewDatesActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_tab_start_date">Start Date</string>
    <string name="ttile_tab_end_date">End Date</string>
    <string name="confirmpassword">Confirm Password</string>


    <style name="DefaultButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#979797</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textStyle">normal</item>
        <item name="android:textSize">20sp</item>
        <item name="android:shadowColor">#f9f9f9</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">1</item>
    </style>
</resources>
