<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/cell_shape"
        android:ellipsize="end"
        android:padding="5dp"
        android:singleLine="true"
        android:text="@string/name" >
    </TextView>

    <TextView
        android:id="@+id/inTime"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@drawable/cell_shape"
        android:ellipsize="end"
        android:padding="5dp"
        android:singleLine="true"
        android:text="@string/in" >
    </TextView>

    <TextView
        android:id="@+id/outTime"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:background="@drawable/cell_shape"
        android:ellipsize="end"
        android:padding="5dp"
        android:singleLine="true"
        android:text="@string/out" >
    </TextView>

    <TextView
        android:id="@+id/dateValue"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/cell_shape"
        android:ellipsize="end"
        android:padding="5dp"
        android:singleLine="true"
        android:text="@string/date" />

    <TextView
        android:id="@+id/remarks"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/cell_shape"
        android:ellipsize="end"
        android:padding="5dp"
        android:singleLine="true"
        android:text="@string/remarks" >
    </TextView>

</LinearLayout>