<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginRight="10dp"
            android:text="ID NO-"
            />

        <TextView
            android:id="@+id/idvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="ID"
            />

    </LinearLayout>

    <EditText
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@drawable/edit_text_design"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLength="50"
        android:hint="@string/name"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingBottom="7dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dip"
        android:paddingTop="15dp"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@drawable/edit_text_design"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLength="50"
        android:hint="@string/email"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="45dip"
        android:paddingTop="15dp"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@drawable/edit_text_design"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLength="50"
        android:hint="@string/address"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="45dip"
        android:paddingTop="15dp"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/desingnation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@drawable/edit_text_design"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLength="50"
        android:hint="@string/designation"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="45dip"
        android:paddingTop="15dp"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/gender"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@drawable/edit_text_design"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLength="50"
        android:hint="@string/gender"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="45dip"
        android:paddingTop="15dp"
        android:textSize="18sp"/>


    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@drawable/edit_text_design"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:maxLength="50"
        android:hint="@string/password"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="45dip"
        android:paddingTop="15dp"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/confirmpassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@drawable/edit_text_design"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:maxLength="50"
        android:hint="@string/confirmpassword"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="45dip"
        android:paddingTop="15dp"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_shape"
            android:tag="facebook_login_button"
            android:textColor="@color/textColorPrimary"
            android:text="@string/signin" />

        <Button
            android:id="@+id/update"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_shape"
            android:tag="facebook_login_button"
            android:textColor="@color/textColorPrimary"
            android:text="@string/update" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:weightSum="2"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <!--
             <com.facebook.login.widget.LoginButton
                 android:id="@+id/facebook_button"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="30dp"
                 android:layout_marginTop="30dp" />

             <com.google.android.gms.common.SignInButton
                 android:id="@+id/google_button"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"/>
             />
             -->

        </LinearLayout>
    </LinearLayout>

</LinearLayout>